<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2022 Google LLC

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="app_name" translatable="false">Sample App for SearchInApps</string>
  <string name="search_text" translatable="false">Get suggestions</string>
  <string name="search_hint" translatable="false">Enter search context</string>
  <string name="location_hint" translatable="false">Enter location latitude, longitude and radius</string>
  <string name="repeat_hint" translatable="false">Enter search repeat</string>
  <string name="trending_text" translatable="false">Get trendings</string>
  <string name="search_content_text" translatable="false">Get content</string>
  <string name="more_search_content_text" translatable="false">More content</string>
  <string name="compact_carousel_layout" translatable="false">Compact Carousel</string>
  <string name="carousel_layout" translatable="false">Carousel</string>
  <string name="tiling_layout" translatable="false">Tiling</string>
</resources>
